# autocorrect_generator_espanso

./: .bumpver.toml  .gitignore  .pre-commit-config.yaml  ALGORITHMS.md  CHANGELOG.md  EFFICIENCY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vulture_whitelist.py
.pre-commit-hooks/: check_file_length.py  check_single_assertion.py
autocorr_generator/: __init__.py  __main__.py  boundaries.py  cli.py  config.py  dictionary.py  exclusions.py  output.py  patterns.py  pipeline.py  processing.py  typos.py
docs/: ALGORITHMS.md  DEBUG_REPORTS_DESIGN.md  EFFICIENCY.md  Makefile  README.md  algorithms.rst  conf.py  efficiency.rst  index.rst  make.bat
docs/api/: index.rst
entroppy/: __init__.py  __main__.py  boundaries.py  cli.py  config.py  conflict_resolution.py  debug_utils.py  dictionary.py  exclusions.py  logger.py  patterns.py  pipeline.py  processing.py  reports.py
entroppy/cli/: __init__.py  parser.py
entroppy/core/: __init__.py  boundaries.py  config.py  pattern_conflicts.py  pattern_extraction.py  pattern_generalization.py  pattern_indexes.py  pattern_logging.py  pattern_validation.py  pattern_validation_runner.py  pattern_validation_worker.py  patterns.py  types.py  typos.py
entroppy/core/boundaries/: __init__.py  detection.py  types.py
entroppy/core/patterns/: __init__.py  logging.py
entroppy/core/patterns/extraction/: filters.py  finder.py  matcher.py
entroppy/core/patterns/validation/: batch_processor.py  batch_processor_helpers.py  coordinator.py  validator.py  worker.py
entroppy/data/: __init__.py  dictionary.py
entroppy/matching/: __init__.py  exclusions.py  pattern_matcher.py
entroppy/processing/: __init__.py  pipeline.py  pipeline_helpers.py  pipeline_reporting.py  pipeline_stages.py
entroppy/processing/stages/: __init__.py  collision_resolution.py  conflict_removal.py  data_models.py  dictionary_loading.py  dictionary_loading_logging.py  helpers.py  pattern_generalization.py  typo_generation.py  worker_context.py
entroppy/reports/: __init__.py  collisions.py  conflicts.py  core.py  data.py  debug_corrections.py  debug_graveyard.py  debug_patterns.py  debug_report_writers.py  debug_typos.py  debug_words.py  exclusions.py  helpers.py  patterns.py  short_typos.py  statistics.py  summary.py
entroppy/resolution/: __init__.py  boundary_logging.py  boundary_selection.py  boundary_utils.py  collision.py  collision_helpers.py  conflicts.py  correction_processing.py  exclusion.py  false_trigger_check.py  history.py  platform_substring_conflict_debug.py  platform_substring_conflict_detection.py  platform_substring_conflict_logging.py  solver.py  state.py  state_caching.py  state_debug.py  state_history.py  state_patterns.py  state_types.py  substring_conflicts.py  typo_index.py  word_processing.py  word_processing_logging.py  worker_context.py
entroppy/resolution/boundaries/: logging.py  selection.py
entroppy/resolution/passes/: __init__.py  candidate_selection.py  candidate_selection_workers.py  conflict_removal.py  conflict_removal_helpers.py  pattern_generalization.py  platform_constraints.py  platform_substring_conflicts.py
entroppy/resolution/passes/candidate_selection/: selector.py
entroppy/resolution/platform_conflicts/: conflict_processing.py  detection.py  formatting_helpers.py  logging.py  parallel.py  platform_pass.py  resolution.py  suffix_array_helpers.py  utils.py
entroppy/resolution/processing/: collision_helpers.py  correction_processor.py  helpers.py
entroppy/resolution/solver/: iterative_solver.py  pass_context.py
entroppy/stages/: __init__.py  collision_resolution.py  conflict_removal.py  data_models.py  dictionary_loading.py  output_generation.py  pattern_generalization.py  typo_generation.py  worker_context.py
entroppy/utils/: __init__.py  debug.py  gpu.py  helpers.py  logging.py  suffix_array.py
examples/: adjacent.txt  exclude.txt
rust/: Cargo.toml
rust/src/: lib.rs
tests/: test_conflict_resolution.py  test_conflict_resolution_integration.py  test_iterative_solver.py
tests/integration/: test_cross_boundary_deduplication.py  test_exclusions_integration.py  test_pipeline_integration.py  test_platform_substring_conflicts.py  test_typo_generation_integration.py
tests/unit/: test_boundaries.py  test_conflict_resolution.py  test_dictionary.py  test_false_trigger_check.py  test_pattern_extraction.py  test_pattern_generalization.py  test_pattern_matching.py  test_pattern_validation.py  test_pipeline_deduplication.py  test_stages.py  test_typos.py  test_word_processing.py  test_worker_context.py
